--- a/pokemon.css
+++ b/pokemon.css
@@ -2,6 +2,10 @@ h2 {
   text-align: center;
 }
 
+h1 {
+  text-align: center;
+}
+
 section {
   display: flex;
   justify-content: center;
@@ -21,4 +25,9 @@ section {
 li {
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+
+h3 {
+  text-align: center;
 }
