--- a/pokemon.css
+++ b/pokemon.css
@@ -12,30 +12,33 @@ section {
 }
 
 #pokemonContainer {
-
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(30, 1fr);
-    grid-column-gap: 2px;
-    grid-row-gap: 3px;
-    }
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(19, 1fr);
+  grid-column-gap: 2px;
+  grid-row-gap: 3px;
+  background-color: #333;
+  font-family: Arial;
 }
 
-a {
-  display: block;
-  margin: auto;
+a { 
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 3px 2px;
+  text-decoration: none;
 }
 
 #stats {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 li {
-  list-style-type:none;
-  /* display: flex;
+  display: flex;
   flex-direction: column;
-  align-items: center; */
+  align-items: center;
 }
 
 h3 {
